--- a/WebRoot/javaScript/js/Todo/iosMenu/index.html
+++ b/WebRoot/javaScript/js/Todo/iosMenu/index.html
@@ -24,11 +24,9 @@ body {
 	<input type="text" />
 	<input type="text" />
 	<div id="div1">
-		<img src="images/1.png" width="64" />
-		<img src="images/2.png" width="64" />
-		<img src="images/3.png" width="64" />
-		<img src="images/4.png" width="64" />
-		<img src="images/5.png" width="64" />
+		<img src="images/1.png" width="64" /> <img src="images/2.png"
+			width="64" /> <img src="images/3.png" width="64" /> <img
+			src="images/4.png" width="64" /> <img src="images/5.png" width="64" />
 	</div>
 </body>
 </html>
