--- a/WebRoot/javaScript/js/setCenter.html
+++ b/WebRoot/javaScript/js/setCenter.html
@@ -4,52 +4,157 @@
 <meta charset="utf-8" />
 <title>JS实现div居中</title>
 <style>
-*{
-	margin:0;
-	padding:0;
-	list-style :none;
-	border:none;
+* {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	border: none;
 }
 /*外层div居中*/
 #main {
-position: absolute; /*极为重要*/
-background-color: blue;
-width:400px;
-height:200px;
-/*left:50%;
+	position: absolute; /*极为重要*/
+	background-color: blue;
+	width: 400px;
+	height: 200px;
+	/*left:50%;
 top:50%;
 margin-left:-200px;
 margin-top:-100px;*/
-border:1px solid #00F;
+	border: 1px solid #00F;
 }
 
 #content {
-position: absolute; /*极为重要*/
-background-color: yellow;
-width: 200px;
-height: 100px;
-/*left:50%;
+	position: absolute; /*极为重要*/
+	background-color: yellow;
+	width: 200px;
+	height: 100px;
+	/*left:50%;
 top:50%;
 margin-left:-100px;
 margin-top:-50px;*/
-
-/*div内部文字居中*/
-text-align: center;
-line-height:100px; /*行间距和div宽度相同*/
+	/*div内部文字居中*/
+	text-align: center;
+	line-height: 100px; /*行间距和div宽度相同*/
 }
 </style>
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<button id="myBtn">按钮</button>
-<div id="main">
-<div id="content">
-Sun
-</div>
-</div>
-<script type="text/javascript">
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<button id="myBtn">按钮</button>
+	<div id="main">
+		<div id="content">Sun</div>
+	</div>
+	<script type="text/javascript">
 window.onload = function() {
 // 获取浏览器窗口
 var windowScreen = document.documentElement;
@@ -77,4 +182,4 @@ myBtn.onclick = function(){
 }
 </script>
 </body>
-</html> 
+</html>
