--- a/WebRoot/javaScript/js/submitPhoto.html
+++ b/WebRoot/javaScript/js/submitPhoto.html
@@ -17,6 +17,7 @@
 	</form>
 
 	<img id="imgPhoto" src="" width="300">
+	<input type="file" multiple="multiple">
 	<script src="jquery-1.11.1.min.js"></script>
 	<script>
 	$("#fileSubmit").click(function(){
