--- a/WebRoot/javaScript/js/Core/demo.html
+++ b/WebRoot/javaScript/js/Core/demo.html
@@ -4,6 +4,11 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <style type="text/css">
+*{
+	margin:0;
+	padding:0;
+	list-style:0;
+}
 </style>
 </head>
 <body>
@@ -24,6 +29,7 @@
 	</form>
 </body>
 <script src="./jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="./common02.js"></script>
 <script>
 function chooseCheckboxAll(name) {
 	$("input[name='"+name+"']").each( function() {
